Fix tree counter wrapping at 768px width;

--- a/src/tenants/salesforce/Home/styles/Landing.module.scss
+++ b/src/tenants/salesforce/Home/styles/Landing.module.scss
@@ -35,7 +35,7 @@
   max-width: 90%;
   margin-bottom: 10vh;
   @include smTabletView {
-    max-width: 60%;
+    max-width: 65%;
   }
   @include lgLaptopView {
     max-width: 1170px;
